Changed to custom style and html.

--- a/01 JS Drum Kit/index.html
+++ b/01 JS Drum Kit/index.html
@@ -4,9 +4,13 @@
   <meta charset="UTF-8">
   <title>JS Drum Kit</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">  
 </head>
 <body>
-
+  <div class="title">
+    <h1>JS Drum Kit</h1>
+    <h3>A fun digital drum kit created with vanilla JavaScript.</h3>
+  </div>
 
   <div class="keys">
     <div data-key="65" class="key">
@@ -45,6 +49,11 @@
       <kbd>L</kbd>
       <span class="sound">tink</span>
     </div>
+  </div>
+
+  <div class="footer">
+    <h3>by abel acosta</h3>
+    <h4>inspired by @wesbos</h4>
   </div>
 
   <audio data-key="65" src="sounds/clap.wav"></audio>
