Seperated JS from index.html

--- a/01 JS Drum Kit/index.html
+++ b/01 JS Drum Kit/index.html
@@ -66,36 +66,7 @@
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
-<script>
-
-// create function to play sound 
-function playSound(e) {
-  const audio = document.querySelector(`audio[data-key = "${e.keyCode}"]`);
-  const key = document.querySelector(`.key[data-key = "${e.keyCode}"]`);
-  if (!audio) return; //stop the function from running 
-  //rewind audio to beginning
-  audio.currentTime = 0;
-  //play audio
-  audio.play();
-
-  //add class on div to animate
-  key.classList.add('playing');
-}
-
-function removeTransition(e) {
-  if (e.propertyName != 'transform') return; // skip the trabsition if not transform
-    this.classList.remove('playing');
-}
-
-//create and event listener to remove playing class
-  const keys = document.querySelectorAll('.key');
-  keys.forEach(key => key.addEventListener('transitionend', removeTransition));
-// event listener is added on page for key-press  
-  window.addEventListener('keydown', playSound);
-  
-
-</script>
-
+<script src="drum.js"></script>
 
 </body>
 </html>
