--- a/Array Cardio 2/index.html
+++ b/Array Cardio 2/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
- 
+ <script src="array-two.js"></script>
 </body>
 </html>
