--- a/08 Fun with HTML5 Canvas/index.html
+++ b/08 Fun with HTML5 Canvas/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>HTML5 Canvas</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <canvas id="draw" width="800" height="800"></canvas>
 
+<script src="canvas.js"></script>
 </body>
 </html>
